--- a/calico-enterprise_versioned_docs/version-3.18/networking/configuring/dual-tor.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/networking/configuring/dual-tor.mdx
@@ -315,7 +315,7 @@ longer matters if there is any other programming of the true default route on th
       :::note
 
       For directly connected BGP peerings, BIRD provides two gateway
-      computation modes, ["direct" and       "recursive"](https://bird.network.cz/?get_doc&v=16&f=bird-6.html#ss6.3)
+      computation modes, "direct" and "recursive".
 .
       "recursive" is the default, but "direct" can give better results when the ToR
       also acts as the route reflector (RR) for the rack.
