Adds image for security events dashboard

--- a/calico-enterprise_versioned_docs/version-3.19-2/threat/security-event-management.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/threat/security-event-management.mdx
@@ -37,6 +37,8 @@ If you find anything that merits further investigation, you can click on an even
 
 * In Manager UI, go to **Threat defense&nbsp;>&nbsp;Security Events Dashboard**.
 
+![Security Events Dashboard](/img/calico-enterprise/security-events-dashboard.png)
+
 ## Security Events
 
 The **Security Events** page lists all the security events that have been detected for your cluster.
