Fixes a manifest link bug for 3.19-2

--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/private-registry/private-registry-regular.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/private-registry/private-registry-regular.mdx
@@ -2,6 +2,8 @@
 description: Install and configure Calico Enterprise in a private registry.
 ---
 
+import PrivateRegistryRegularTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/PrivateRegistryRegular-temp';
+
 # Install from a private registry
 
 ## Big picture
@@ -30,7 +32,7 @@ An **image pull secret** is used in Kubernetes to deploy container images from a
 - [Run the operator using images from your private registry](#run-the-operator-using-images-from-your-private-registry)
 - [Configure the operator to use images from your private registry](#configure-the-operator-to-use-images-from-your-private-registry)
 
-<PrivateRegistryRegular />
+<PrivateRegistryRegularTemp />
 
 :::note
 
