--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/aks.mdx
@@ -2,6 +2,8 @@
 description: Install Calico Enterprise for an AKS cluster.
 ---
 
+import InstallAKSTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallAKS-temp.js';
+
 # Microsoft Azure Kubernetes Service (AKS)
 
 ## Big picture
@@ -74,7 +76,7 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
 1. [Option B: Install with Calico networking](#install-with-calico-enterprise-networking)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 
-<InstallAKS clusterType='standalone' />
+<InstallAKSTemp clusterType='standalone' />
 
 ## Next steps
 
