--- a/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
@@ -92,7 +92,7 @@ If you don’t have an application to test WAF with or don’t want to use it ri
 we recommend that you install the [GoogleCloudPlatform/microservices-demo app](https://github.com/GoogleCloudPlatform/microservices-demo):
 
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/kubernetes-manifests.yaml
+kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/main/release/kubernetes-manifests.yaml
 ```
 
 #### Enable WAF using the CLI
