update release notes date

--- a/calico_versioned_docs/version-3.28/release-notes/index.mdx
+++ b/calico_versioned_docs/version-3.28/release-notes/index.mdx
@@ -140,7 +140,7 @@ These improvements apply only when Calico is running in iptables mode.
 
 ### Calico Open Source 3.28.0 general availability release
 
-May DD, 2024
+May 10, 2024
 
 Calico Open Source release 3.28.0 is now generally available.
 
