--- a/calico-enterprise/reference/installation/_api.mdx
+++ b/calico-enterprise/reference/installation/_api.mdx
@@ -14,8 +14,6 @@ Resource Types:
 <ul><li>
 <a href="#operator.tigera.io/v1.APIServer">APIServer</a>
 </li><li>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegration">AmazonCloudIntegration</a>
-</li><li>
 <a href="#operator.tigera.io/v1.ApplicationLayer">ApplicationLayer</a>
 </li><li>
 <a href="#operator.tigera.io/v1.Authentication">Authentication</a>
@@ -41,6 +39,8 @@ Resource Types:
 <a href="#operator.tigera.io/v1.Manager">Manager</a>
 </li><li>
 <a href="#operator.tigera.io/v1.Monitor">Monitor</a>
+</li><li>
+<a href="#operator.tigera.io/v1.PacketCaptureAPI">PacketCaptureAPI</a>
 </li><li>
 <a href="#operator.tigera.io/v1.PolicyRecommendation">PolicyRecommendation</a>
 </li><li>
@@ -171,241 +171,6 @@ Most recently observed status for the Tigera API server.
 </tr>
 </tbody>
 </table>
-<h3 id="operator.tigera.io/v1.AmazonCloudIntegration">AmazonCloudIntegration</h3>
-<p>
-AmazonCloudIntegration is the Schema for the amazoncloudintegrations API
-</p>
-<table>
-<thead>
-<tr>
-<th>Field</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>
-
-<code>apiVersion</code><br/>
-string
-</td>
-<td>
-
-<code>
-operator.tigera.io/v1
-</code>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>kind</code><br/>
-string
-
-</td>
-<td>
-<code>AmazonCloudIntegration</code>
-</td>
-</tr>
-<tr>
-<td>
-
-<code>metadata</code><br/>
-<em>
-<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#objectmeta-v1-meta">
-Kubernetes meta/v1.ObjectMeta
-</a>
-</em>
-
-</td>
-<td>
-
-Refer to the Kubernetes API documentation for the fields of the
-<code>metadata</code> field.
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>spec</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegrationSpec">
-AmazonCloudIntegrationSpec
-</a>
-</em>
-
-</td>
-<td>
-
-<br/>
-<br/>
-<table>
-<tr>
-<td>
-<code>defaultPodMetadataAccess</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.MetadataAccessAllowedType">
-MetadataAccessAllowedType
-</a>
-</em>
-
-</td>
-<td>
-
-<em>(Optional)</em>
-<p>
-DefaultPodMetadataAccess defines what the default behavior will be for accessing
-the AWS metadata service from a pod.
-Default: Denied
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>nodeSecurityGroupIDs</code><br/>
-<em>
-[]string
-</em>
-
-</td>
-<td>
-
-<p>
-NodeSecurityGroupIDs is a list of Security Group IDs that all nodes and masters
-will be in.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>podSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-PodSecurityGroupID is the ID of the Security Group which all pods should be placed
-in by default.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>vpcs</code><br/>
-<em>
-[]string
-</em>
-
-</td>
-<td>
-
-<p>
-VPCS is a list of VPC IDs to monitor for ENIs and Security Groups, only one is supported.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>sqsURL</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-SQSURL is the SQS URL needed to access the Simple Queue Service.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>awsRegion</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-AWSRegion is the region in which your cluster is located.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>enforcedSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-EnforcedSecurityGroupID is the ID of the Security Group which will be applied to all
-ENIs that are on a host that is also part of the Kubernetes cluster.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>trustEnforcedSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-TrustEnforcedSecurityGroupID is the ID of the Security Group which will be applied
-to all ENIs in the VPC.
-</p>
-
-</td>
-</tr>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-
-<code>status</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegrationStatus">
-AmazonCloudIntegrationStatus
-</a>
-</em>
-
-</td>
-<td>
-
-</td>
-</tr>
-</tbody>
-</table>
 <h3 id="operator.tigera.io/v1.ApplicationLayer">ApplicationLayer</h3>
 <p>
 ApplicationLayer is the Schema for the applicationlayers API
@@ -491,7 +256,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -589,6 +354,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -816,6 +582,7 @@ AuthenticationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1248,6 +1015,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3022,6 +2790,7 @@ ManagementClusterConnectionStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3292,6 +3061,124 @@ MonitorStatus
 </td>
 <td>
 
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPI">PacketCaptureAPI</h3>
+<p>
+PacketCaptureAPI is used to configure the resource requirement for PacketCaptureAPI deployment. It must be named &ldquo;tigera-secure&rdquo;.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>apiVersion</code><br/>
+string
+</td>
+<td>
+
+<code>
+operator.tigera.io/v1
+</code>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>kind</code><br/>
+string
+
+</td>
+<td>
+<code>PacketCaptureAPI</code>
+</td>
+</tr>
+<tr>
+<td>
+
+<code>metadata</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#objectmeta-v1-meta">
+Kubernetes meta/v1.ObjectMeta
+</a>
+</em>
+
+</td>
+<td>
+
+Refer to the Kubernetes API documentation for the fields of the
+<code>metadata</code> field.
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPISpec">
+PacketCaptureAPISpec
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+Specification of the desired state for the PacketCaptureAPI.
+</p>
+<br/>
+<br/>
+<table>
+<tr>
+<td>
+<code>packetCaptureAPIDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeployment">
+PacketCaptureAPIDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+PacketCaptureAPIDeployment configures the PacketCaptureAPI Deployment.
+</p>
+
+</td>
+</tr>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+
+<code>status</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIStatus">
+PacketCaptureAPIStatus
+</a>
+</em>
+
+</td>
+<td>
+
+<p>
+Most recently observed state for the PacketCaptureAPI.
+</p>
+
 </td>
 </tr>
 </tbody>
@@ -3403,6 +3290,7 @@ PolicyRecommendationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3489,6 +3377,7 @@ TargetType
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3613,6 +3502,7 @@ TargetType
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3955,6 +3845,7 @@ TenantStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -4046,6 +3937,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -4869,229 +4761,6 @@ Define resources requests and limits for single Pods.
 </tr>
 </tbody>
 </table>
-<h3 id="operator.tigera.io/v1.AmazonCloudIntegrationSpec">AmazonCloudIntegrationSpec</h3>
-<p>
-
-(<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegration">AmazonCloudIntegration</a>)
-
-</p>
-<p>
-AmazonCloudIntegrationSpec defines the desired state of AmazonCloudIntegration
-</p>
-<table>
-<thead>
-<tr>
-<th>Field</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>
-
-<code>defaultPodMetadataAccess</code><br/>
-<em>
-<a href="#operator.tigera.io/v1.MetadataAccessAllowedType">
-MetadataAccessAllowedType
-</a>
-</em>
-
-</td>
-<td>
-
-<em>(Optional)</em>
-<p>
-DefaultPodMetadataAccess defines what the default behavior will be for accessing
-the AWS metadata service from a pod.
-Default: Denied
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>nodeSecurityGroupIDs</code><br/>
-<em>
-[]string
-</em>
-
-</td>
-<td>
-
-<p>
-NodeSecurityGroupIDs is a list of Security Group IDs that all nodes and masters
-will be in.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>podSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-PodSecurityGroupID is the ID of the Security Group which all pods should be placed
-in by default.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>vpcs</code><br/>
-<em>
-[]string
-</em>
-
-</td>
-<td>
-
-<p>
-VPCS is a list of VPC IDs to monitor for ENIs and Security Groups, only one is supported.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>sqsURL</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-SQSURL is the SQS URL needed to access the Simple Queue Service.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>awsRegion</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-AWSRegion is the region in which your cluster is located.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>enforcedSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-EnforcedSecurityGroupID is the ID of the Security Group which will be applied to all
-ENIs that are on a host that is also part of the Kubernetes cluster.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>trustEnforcedSecurityGroupID</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-TrustEnforcedSecurityGroupID is the ID of the Security Group which will be applied
-to all ENIs in the VPC.
-</p>
-
-</td>
-</tr>
-</tbody>
-</table>
-<h3 id="operator.tigera.io/v1.AmazonCloudIntegrationStatus">AmazonCloudIntegrationStatus</h3>
-<p>
-
-(<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegration">AmazonCloudIntegration</a>)
-
-</p>
-<p>
-AmazonCloudIntegrationStatus defines the observed state of AmazonCloudIntegration
-</p>
-<table>
-<thead>
-<tr>
-<th>Field</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>
-
-<code>state</code><br/>
-<em>
-string
-</em>
-
-</td>
-<td>
-
-<p>
-State provides user-readable status.
-</p>
-
-</td>
-</tr>
-<tr>
-<td>
-
-<code>conditions</code><br/>
-<em>
-<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#condition-v1-meta">
-[]Kubernetes meta/v1.Condition
-</a>
-</em>
-
-</td>
-<td>
-
-<em>(Optional)</em>
-<p>
-Conditions represents the latest observed set of conditions for the component. A component may be one or more of
-Ready, Progressing, Degraded or other customer types.
-</p>
-
-</td>
-</tr>
-</tbody>
-</table>
 <h3 id="operator.tigera.io/v1.AnomalyDetectionSpec">AnomalyDetectionSpec</h3>
 <p>
 
@@ -5168,7 +4837,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -14026,7 +13695,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -14975,7 +14644,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -17964,17 +17633,6 @@ already exist in the object&rsquo;s annotations.
 </tr>
 </tbody>
 </table>
-<h3 id="operator.tigera.io/v1.MetadataAccessAllowedType">MetadataAccessAllowedType
-(<code>string</code> alias)</h3>
-<p>
-
-(<em>Appears on:</em>
-<a href="#operator.tigera.io/v1.AmazonCloudIntegrationSpec">AmazonCloudIntegrationSpec</a>)
-
-</p>
-<p>
-MetadataAccessAllowedType
-</p>
 <h3 id="operator.tigera.io/v1.MonitorSpec">MonitorSpec</h3>
 <p>
 
@@ -18434,6 +18092,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -18447,6 +18106,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -18459,6 +18119,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -18568,6 +18229,416 @@ OIDCType defines how OIDC is configured for Tigera Enterprise. Dex should be the
 The Tigera option can help in specific use-cases, for instance, when you are unable to configure a client secret.
 One of: Dex, Tigera
 </p>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeployment">PacketCaptureAPIDeployment</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPISpec">PacketCaptureAPISpec</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeployment is the configuration for the PacketCaptureAPI Deployment.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentSpec">
+PacketCaptureAPIDeploymentSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the specification of the PacketCaptureAPI Deployment.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeploymentContainer">PacketCaptureAPIDeploymentContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentPodSpec">PacketCaptureAPIDeploymentPodSpec</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeploymentContainer is a PacketCaptureAPI Deployment container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the PacketCaptureAPI Deployment container by name.
+Supported values are: tigera-packetcapture-server
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named PacketCaptureAPI Deployment container&rsquo;s resources.
+If omitted, the PacketCaptureAPI Deployment will use its default value for this container&rsquo;s resources.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeploymentInitContainer">PacketCaptureAPIDeploymentInitContainer</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentPodSpec">PacketCaptureAPIDeploymentPodSpec</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeploymentInitContainer is a PacketCaptureAPI Deployment init container.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>name</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+Name is an enum which identifies the PacketCaptureAPI Deployment init container by name.
+Supported values are: tigera-packetcapture-server-tls-key-cert-provisioner
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>resources</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#resourcerequirements-v1-core">
+Kubernetes core/v1.ResourceRequirements
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Resources allows customization of limits and requests for compute resources such as cpu and memory.
+If specified, this overrides the named PacketCaptureAPI Deployment init container&rsquo;s resources.
+If omitted, the PacketCaptureAPI Deployment will use its default value for this init container&rsquo;s resources.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeploymentPodSpec">PacketCaptureAPIDeploymentPodSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentPodTemplateSpec">PacketCaptureAPIDeploymentPodTemplateSpec</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeploymentPodSpec is the PacketCaptureAPI Deployment&rsquo;s PodSpec.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>initContainers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentInitContainer">
+[]PacketCaptureAPIDeploymentInitContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+InitContainers is a list of PacketCaptureAPI init containers.
+If specified, this overrides the specified PacketCaptureAPI Deployment init containers.
+If omitted, the PacketCaptureAPI Deployment will use its default values for its init containers.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>containers</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentContainer">
+[]PacketCaptureAPIDeploymentContainer
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Containers is a list of PacketCaptureAPI containers.
+If specified, this overrides the specified PacketCaptureAPI Deployment containers.
+If omitted, the PacketCaptureAPI Deployment will use its default values for its containers.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeploymentPodTemplateSpec">PacketCaptureAPIDeploymentPodTemplateSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentSpec">PacketCaptureAPIDeploymentSpec</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeploymentPodTemplateSpec is the PacketCaptureAPI Deployment&rsquo;s PodTemplateSpec
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>spec</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentPodSpec">
+PacketCaptureAPIDeploymentPodSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Spec is the PacketCaptureAPI Deployment&rsquo;s PodSpec.
+</p>
+<br/>
+<br/>
+<table>
+</table>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIDeploymentSpec">PacketCaptureAPIDeploymentSpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeployment">PacketCaptureAPIDeployment</a>)
+
+</p>
+<p>
+PacketCaptureAPIDeploymentSpec defines configuration for the PacketCaptureAPI Deployment.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>template</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeploymentPodTemplateSpec">
+PacketCaptureAPIDeploymentPodTemplateSpec
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Template describes the PacketCaptureAPI Deployment pod that will be created.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPISpec">PacketCaptureAPISpec</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPI">PacketCaptureAPI</a>)
+
+</p>
+<p>
+PacketCaptureAPISpec defines configuration for the Packet Capture API.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>packetCaptureAPIDeployment</code><br/>
+<em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPIDeployment">
+PacketCaptureAPIDeployment
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+PacketCaptureAPIDeployment configures the PacketCaptureAPI Deployment.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
+<h3 id="operator.tigera.io/v1.PacketCaptureAPIStatus">PacketCaptureAPIStatus</h3>
+<p>
+
+(<em>Appears on:</em>
+<a href="#operator.tigera.io/v1.PacketCaptureAPI">PacketCaptureAPI</a>)
+
+</p>
+<p>
+PacketCaptureAPIStatus defines the observed state of the Packet Capture API.
+</p>
+<table>
+<thead>
+<tr>
+<th>Field</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+
+<code>state</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<p>
+State provides user-readable status.
+</p>
+
+</td>
+</tr>
+<tr>
+<td>
+
+<code>conditions</code><br/>
+<em>
+<a href="https://v1-21.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#condition-v1-meta">
+[]Kubernetes meta/v1.Condition
+</a>
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+Conditions represents the latest observed set of conditions for the component. A component may be one or more of
+Ready, Progressing, Degraded or other customer types.
+</p>
+
+</td>
+</tr>
+</tbody>
+</table>
 <h3 id="operator.tigera.io/v1.PathMatch">PathMatch</h3>
 <p>
 
@@ -19585,6 +19656,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -19597,6 +19669,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -19798,6 +19871,7 @@ TargetType
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -19866,6 +19940,7 @@ TargetType
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -20024,6 +20099,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -20037,6 +20113,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -20049,6 +20126,7 @@ bool
 
 </td>
 <td>
+
 
 </td>
 </tr>
