--- a/calico-enterprise_versioned_docs/version-3.16/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/reference/installation/_api.mdx
@@ -394,6 +394,7 @@ AmazonCloudIntegrationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -483,7 +484,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -542,6 +543,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -749,6 +751,7 @@ AuthenticationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1083,6 +1086,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2586,6 +2590,7 @@ ManagementClusterConnectionStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2797,6 +2802,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2888,6 +2894,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3937,7 +3944,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -7739,7 +7746,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -8505,7 +8512,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -10137,6 +10144,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -10150,6 +10158,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -10162,6 +10171,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
