--- a/calico-enterprise_versioned_docs/version-3.18-2/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/reference/installation/_api.mdx
@@ -398,6 +398,7 @@ AmazonCloudIntegrationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -487,7 +488,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -565,6 +566,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -772,6 +774,7 @@ AuthenticationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1106,6 +1109,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2723,6 +2727,7 @@ ManagementClusterConnectionStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2934,6 +2939,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3026,6 +3032,7 @@ PolicyRecommendationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3153,6 +3160,7 @@ TenantStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3244,6 +3252,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -4287,7 +4296,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -9110,7 +9119,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -10031,7 +10040,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -11722,6 +11731,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -11735,6 +11745,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -11747,6 +11758,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
