--- a/calico-enterprise_versioned_docs/version-3.18/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/reference/installation/_api.mdx
@@ -396,6 +396,7 @@ AmazonCloudIntegrationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -485,7 +486,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -563,6 +564,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -770,6 +772,7 @@ AuthenticationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1104,6 +1107,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2646,6 +2650,7 @@ ManagementClusterConnectionStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2857,6 +2862,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2950,6 +2956,7 @@ PolicyRecommendationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3041,6 +3048,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -4090,7 +4098,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -8418,7 +8426,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -9223,7 +9231,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -10895,6 +10903,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -10908,6 +10917,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -10920,6 +10930,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
