--- a/calico-enterprise_versioned_docs/version-3.19-1/reference/installation/_api.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/reference/installation/_api.mdx
@@ -398,6 +398,7 @@ AmazonCloudIntegrationStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -487,7 +488,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -565,6 +566,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -772,6 +774,7 @@ AuthenticationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1106,6 +1109,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2723,6 +2727,7 @@ ManagementClusterConnectionStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -2953,6 +2958,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3045,6 +3051,7 @@ PolicyRecommendationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -3228,6 +3235,7 @@ TenantStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -3319,6 +3327,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -4362,7 +4371,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -9412,7 +9421,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -10333,7 +10342,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -12055,6 +12064,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -12068,6 +12078,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -12080,6 +12091,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -12624,6 +12636,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -12636,6 +12649,7 @@ string
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -12835,6 +12849,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -12848,6 +12863,7 @@ string
 </td>
 <td>
 
+
 </td>
 </tr>
 <tr>
@@ -12860,6 +12876,7 @@ bool
 
 </td>
 <td>
+
 
 </td>
 </tr>
