--- a/calico/reference/installation/_api.mdx
+++ b/calico/reference/installation/_api.mdx
@@ -234,7 +234,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -312,6 +312,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -546,6 +547,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1470,6 +1472,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -1562,6 +1565,7 @@ PolicyRecommendationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1689,6 +1693,7 @@ TenantStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -1780,6 +1785,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2479,7 +2485,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -6392,7 +6398,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -7275,7 +7281,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
