--- a/calico_versioned_docs/version-3.27/reference/installation/_api.mdx
+++ b/calico_versioned_docs/version-3.27/reference/installation/_api.mdx
@@ -234,7 +234,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -312,6 +312,7 @@ ApplicationLayerStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -546,6 +547,7 @@ EgressGatewayStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1470,6 +1472,7 @@ MonitorStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -1562,6 +1565,7 @@ PolicyRecommendationStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -1689,6 +1693,7 @@ TenantStatus
 </td>
 <td>
 
+
 </td>
 </tr>
 </tbody>
@@ -1780,6 +1785,7 @@ TigeraStatusStatus
 
 </td>
 <td>
+
 
 </td>
 </tr>
@@ -2479,7 +2485,7 @@ WAFStatusType
 
 <p>
 WebApplicationFirewall controls whether or not ModSecurity enforcement is enabled for the cluster.
-When enabled, Services may opt-in to having ingress traffic examined by ModSecurity.
+When enabled, Services may opt-in to having ingress traffic examed by ModSecurity.
 </p>
 
 </td>
@@ -5483,6 +5489,24 @@ If omitted, the EGW Deployment will use its default value for tolerations.
 
 </td>
 </tr>
+<tr>
+<td>
+
+<code>priorityClassName</code><br/>
+<em>
+string
+</em>
+
+</td>
+<td>
+
+<em>(Optional)</em>
+<p>
+PriorityClassName allows to specify a PriorityClass resource to be used.
+</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 <h3 id="operator.tigera.io/v1.EgressGatewayDeploymentPodTemplateSpec">EgressGatewayDeploymentPodTemplateSpec</h3>
@@ -6392,7 +6416,7 @@ int32
 
 <em>(Optional)</em>
 <p>
-BlockSize specifies the CIDR prefix length to use when allocating per-node IP blocks from
+BlockSize specifies the CIDR prefex length to use when allocating per-node IP blocks from
 the main IP pool CIDR.
 Default: 26 (IPv4), 122 (IPv6)
 </p>
@@ -7275,7 +7299,7 @@ int32
 
 <p>
 MTU is the most recently observed value for pod network MTU. This may be an explicitly
-configured value, or based on Calico&rsquo;s native auto-detection.
+configured value, or based on Calico&rsquo;s native auto-detetion.
 </p>
 
 </td>
@@ -8011,7 +8035,7 @@ One of: None, Login, Consent, SelectAccount.
 </p>
 <p>
 Provider represents a particular provider or flavor of Kubernetes. Valid options
-are: EKS, GKE, AKS, RKE2, OpenShift, DockerEnterprise.
+are: EKS, GKE, AKS, RKE2, OpenShift, DockerEnterprise, TKG.
 </p>
 <h3 id="operator.tigera.io/v1.StatusConditionType">StatusConditionType
 (<code>string</code> alias)</h3>
