Add recommended default value for pods per node on AKS

--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/aks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/install-on-clusters/aks.mdx
@@ -47,6 +47,10 @@ Install {{prodname}} on an AKS managed Kubernetes cluster.
   - To use the Azure CNI, see [Azure CNI networking](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni)
   - To use the Azure CNI with overlay networking, see [Azure CNI with Overlay](https://learn.microsoft.com/en-us/azure/aks/azure-cni-overlay)
 
+- Appropriate value for number of pods per node
+  
+  It is recommended to set the maximum pods per node to be at least 60 for use with Calico Enterprise. The default value in AKS is 30. If you need to increase the number of pods per node, see [Configure maximum pods per node](https://docs.microsoft.com/en-us/azure/aks/configure-azure-cni#configure-maximum-pods-per-node).
+ 
 - Cluster is not using a Kubernetes reconciler
 
   If your cluster has an existing version of {{prodname}} installed, verify that the cluster is not managed by any kind of Kubernetes reconciler. For example, if addon-manager exists, there will be an annotation called, `addonmanager.kubernetes.io/mode` on either of the following resources (if the resources exist):
