remove tiny typo

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -172,7 +172,7 @@ Calico Enterprise 3.18.2 is now available. This release includes bug fixes and i
 
 #### Bug fixes
 
-* Drastically increased Voltron's Kubernetes client QPS and Burst to prevent it from rate limiting itself in MCM setups.0
+* Drastically increased Voltron's Kubernetes client QPS and Burst to prevent it from rate limiting itself in MCM setups.
 * Fixed a bug that prevented Linseed from creating tokens for Intrusion Detection and DPI components in managed clusters if compliance is not enabled.
 * Fixes an issue in the operator that caused it to accumulate more memory resources over time.
 * If kube-controllers metric port is set to 0, no ingress rule will be created.
